<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_about_us">About Us</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="droid_desserts">Droid Desserts</string>
    <string name="choose_desserts">Choose Desserts</string>
    <string name="donuts_are_glazed_and_sprinkled_with_candy">Donuts are glazed and sprinkled with candy</string>
    <string name="light_up_your_taste_buds">Light up’ your taste buds’!</string>
    <string name="lot_s_of_things_have_changed_but_cupcake_s_goodness_hasn_t">Lot’s of things have changed, but Cupcake\'s goodness hasn’t.</string>

    <string name="donut_order">You have ordered donuts</string>
    <string name="lollipop_order">You have ordered lollipops</string>
    <string name="cupcake_order">You have ordered cupcakes</string>
    <string name="choose_delivery_method">Choose Delivery Method</string>
    <string name="same_day_delivery">Same Day Delivery</string>
    <string name="next_day_delivery">Next Day Delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="order">Order</string>
    <string name="call_us">Call Us</string>
    <string name="status">Status</string>
    <string name="locate_us">Locate Us</string>
    <string name="your_order_will_appear_here">Your order will appear here...</string>
    <string name="name">Name:</string>
    <string name="john_doe">John Doe</string>
    <string name="address">Address:</string>
    <string name="_0722000111">0722000111</string>
    <string name="door_apt_flat_suite_estate">Door, Apt/Flat/Suite, Estate</string>
    <string name="phone">Phone:</string>
    <string name="note">Note:</string>
    <string name="write_a_note_for_this_order">Write a note for this order...</string>

</resources>
