<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jeffreykingori.droidcafe.MainActivity">
    <item
        android:id="@+id/action_about_us"
        android:orderInCategory="100"
        android:title="@string/action_about_us"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_order"
        android:orderInCategory="1"
        android:title="@string/order"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_add_shopping_cart_24dp"/>

    <item
        android:id="@+id/action_status"
        android:orderInCategory="2"
        android:title="@string/status"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_call_us"
        android:orderInCategory="3"
        android:title="@string/call_us"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_call_white_24dp"/>
    <item
        android:id="@+id/action_location"
        android:orderInCategory="4"
        android:title="@string/locate_us"
        app:showAsAction="never" />



</menu>
