<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/display_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/display_order"

        >

        <TextView
            android:id="@+id/delivery_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_delivery_method"
            android:textSize="16sp"
            android:textStyle="italic"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:checkedButton="@id/same_day"
            >
            <RadioButton
                android:id="@+id/same_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/same_day_delivery"
                android:onClick="onRadioButtonSelected"
                android:textColor="@android:color/black"
                />
            <RadioButton
                android:id="@+id/next_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_day_delivery"
                android:onClick="onRadioButtonSelected"
                android:textColor="@android:color/black"
                />
            <RadioButton
                android:id="@+id/pick_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_up"
                android:onClick="onRadioButtonSelected"
                android:textColor="@android:color/black"
                />
        </RadioGroup>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
